--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bangladesh 2.0</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style/style.css">
 </head>
-<body>
-    
+
+<body class="fira-sans-bold">
+    <nav>
+        <header>
+        <h2>Bangladesh 2.0</h2>
+        <ul>
+            <li><a href=""><button class="button-primary">Sign In</button></a></li>
+        </ul>
+    </header>
+</nav>
+    <main>
+        <section class="bd">
+            <div class="section-container">
+                <div class="section-column">
+                <h5 class="section-tittle">Bangladesh 2.0</h5>
+                <div class="section-description">Idea , innovation ,
+                    <br>vision and challenges in New Bangladesh.</div>
+                    <button class="btn-primary">Explore New Bangladesh</button>
+                </div>
+                <div class="section-coumn">
+                    <img src="images/hero.png" alt="">
+                </div>
+            </div>
+        </section>
+
+    </main>
+    <footer>
+
+    </footer>
+
 </body>
+
 </html>
