added The Vision of Future section

--- a/index.html
+++ b/index.html
@@ -16,25 +16,63 @@
 <body class="fira-sans-bold">
     <nav>
         <header>
-        <h2>Bangladesh 2.0</h2>
-        <ul>
-            <li><a href=""><button class="button-primary">Sign In</button></a></li>
-        </ul>
-    </header>
-</nav>
+            <h2>Bangladesh 2.0</h2>
+            <ul>
+                <li><a href=""><button class="button-primary">Sign In</button></a></li>
+            </ul>
+        </header>
+    </nav>
     <main>
-        <section class="bd">
+        <section class="banner">
             <div class="section-container">
                 <div class="section-column">
-                <h5 class="section-tittle">Bangladesh 2.0</h5>
-                <div class="section-description">Idea , innovation ,
-                    <br>vision and challenges in New Bangladesh.</div>
+                    <h5 class="section-title">Bangladesh 2.0</h5>
+                    <div class="section-description">Idea , innovation ,
+                        <br>vision and challenges in New Bangladesh.
+                    </div>
                     <button class="btn-primary">Explore New Bangladesh</button>
                 </div>
                 <div class="section-coumn">
                     <img src="images/hero.png" alt="">
                 </div>
             </div>
+        </section>
+
+        <!-- Vision section start-->
+
+        <section class="Tech">
+            <div>
+                <h2 class="tech-title-main">The Vision of Future</h2>
+                <p class="tech-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+                    cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives
+                    in renewable energy, digital transformation, and robust infrastructure, the country is set to become
+                    a global model of development.</p>
+            </div>
+            <div class="tech-container">
+            <!--.tech*3>img+h4.tech-title+p.tech-descrip-->
+            <div class="tech1">
+                <img src="images/card-icon.png" alt="">
+                <h4 class="tech-title">Digital Transformation</h4>
+                <p class="tech-descrip">Creating a nationwide digital ecosystem to enhance connectivity and access to
+                    services for all citizens.</p>
+                    <button class="btn-blue">Learn More</button>
+            </div>
+            <div class="tech2">
+                <img src="images/card-icon.png" alt="">
+                <h4 class="tech-title">Green Energy</h4>
+                <p class="tech-descrip">Investments in solar and wind energy to ensure a sustainable and eco-friendly
+                    future.</p>
+                    <button class="btn-green">Learn More</button>
+            </div>
+            <div class="tech3">
+                <img src="images/card-icon.png" alt="">
+                <h4 class="tech-title">Modern Infrastructure</h4>
+                <p class="tech-descrip">Building state-of-the-art infrastructure to support economic growth and global
+                    competitiveness.</p>
+                    <button class="btn-yellow">Learn More</button>
+                </div>
+            </div>
+
         </section>
 
     </main>
