added quote section of Dr. Younus

--- a/index.html
+++ b/index.html
@@ -49,30 +49,46 @@
                     a global model of development.</p>
             </div>
             <div class="tech-container">
-            <!--.tech*3>img+h4.tech-title+p.tech-descrip-->
-            <div class="tech1">
-                <img src="images/card-icon.png" alt="">
-                <h4 class="tech-title">Digital Transformation</h4>
-                <p class="tech-descrip">Creating a nationwide digital ecosystem to enhance connectivity and access to
-                    services for all citizens.</p>
+                <!--.tech*3>img+h4.tech-title+p.tech-descrip-->
+                <div class="tech1">
+                    <img src="images/card-icon.png" alt="">
+                    <h4 class="tech-title">Digital Transformation</h4>
+                    <p class="tech-descrip">Creating a nationwide digital ecosystem to enhance connectivity and access
+                        to
+                        services for all citizens.</p>
                     <button class="btn-blue">Learn More</button>
-            </div>
-            <div class="tech2">
-                <img src="images/card-icon.png" alt="">
-                <h4 class="tech-title">Green Energy</h4>
-                <p class="tech-descrip">Investments in solar and wind energy to ensure a sustainable and eco-friendly
-                    future.</p>
+                </div>
+                <div class="tech2">
+                    <img src="images/card-icon.png" alt="">
+                    <h4 class="tech-title">Green Energy</h4>
+                    <p class="tech-descrip">Investments in solar and wind energy to ensure a sustainable and
+                        eco-friendly
+                        future.</p>
                     <button class="btn-green">Learn More</button>
-            </div>
-            <div class="tech3">
-                <img src="images/card-icon.png" alt="">
-                <h4 class="tech-title">Modern Infrastructure</h4>
-                <p class="tech-descrip">Building state-of-the-art infrastructure to support economic growth and global
-                    competitiveness.</p>
+                </div>
+                <div class="tech3">
+                    <img src="images/card-icon.png" alt="">
+                    <h4 class="tech-title">Modern Infrastructure</h4>
+                    <p class="tech-descrip">Building state-of-the-art infrastructure to support economic growth and
+                        global
+                        competitiveness.</p>
                     <button class="btn-yellow">Learn More</button>
                 </div>
             </div>
 
+            <!--DrYounus.section-->
+            
+            <div class="DrYounus">
+                <img src="images/quote-bg.png" alt="">
+                <div class="bottom">
+                    <p class="quote">"I began my work in the '70s, teaching at a university in Bangladesh, and these
+                        economic theories that I had learned stopped ringing true for me, as I saw the misery of people
+                        living all around me.</p>
+                </div>
+                <h3>Dr. Muhammad Yunus</h3>
+                <p class="c-d">Chief Adviser of the People's Republic of Bangladesh</p>
+            </div>
+            </div>
         </section>
 
     </main>
