--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
 
             <!--DrYounus.section-->
-            
+
             <div class="DrYounus">
                 <img src="images/quote-bg.png" alt="">
                 <div class="bottom">
@@ -89,7 +89,56 @@
                 <p class="c-d">Chief Adviser of the People's Republic of Bangladesh</p>
             </div>
             </div>
+            <!--news-section -->
+            <div class="news-section">
+                <div class="new-details">
+                    <h1>Recent News</h1>
+                    <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology,
+                        promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy,
+                        digital transformation, and robust infrastructure, the country is set to become a global model
+                        of development.</p>
+                </div>
+                <!--1st card -->
+                <div class="news-card-container">
+                    <img class="image-news" src="images/satelite.png" alt="">
+                    <div class="image-details">
+                        <h2>Bangladesh Launches New Satellite</h2>
+                        <img src="images/al-jazeera.png" alt="">
+                        <div class="date-container">
+                            <p>Date: 01/11/2025</p>
+                            <p>Time: 6.54 PM</p>
+                        </div>
+                        <p class=" paragraph">Not until the creation and maintenance of decent conditions of life for
+                            all people are recognized and accepted as a common obligation of all people and all
+                            countries—not until then shall we,
+                            with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        <button class="btn-primary" id="read">Read More</button>
+
+                    </div>
+                </div>
+                <!--2nd card -->
+
+                <div class="news-card-container2">
+                    <img class="image-news" src="images/satelite.png" alt="">
+                    <div class="image-details">
+                        <h2>Bangladesh Launches New Satellite</h2>
+                        <img src="images/al-jazeera.png" alt="">
+                        <div class="date-container">
+                            <p>Date: 01/11/2025</p>
+                            <p>Time: 6.54 PM</p>
+                        </div>
+                        <p class=" paragraph">Not until the creation and maintenance of decent conditions of life for
+                            all people are recognized and accepted as a common obligation of all people and all
+                            countries—not until then shall we,
+                            with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        <button class="btn-primary" id="read">Read More</button>
+                        
+                    </div>
+                </div>
+            </div>
+
         </section>
+
 
     </main>
     <footer>
