--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bangladesh 2.0</title>
+    <link rel="shortcut icon" href="images/1000_F_325074662_FYru8QnTFSgDca4D706vpkGmH0mYVSQb.jpg" type="images">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -89,6 +90,7 @@
                 <p class="c-d">Chief Adviser of the People's Republic of Bangladesh</p>
             </div>
             </div>
+            </div>
             <!--news-section -->
             <div class="news-section">
                 <div class="new-details">
@@ -132,17 +134,60 @@
                             countries—not until then shall we,
                             with a certain degree of justification, be able to speak of humankind as civilized</p>
                         <button class="btn-primary" id="read">Read More</button>
-                        
                     </div>
                 </div>
             </div>
 
+            <!-- donate section -->
+            <div class="donate-section">
+                <h1>Donate Today</h1>
+                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology,
+                    promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy,
+                    digital transformation, and robust infrastructure.</p>
+
+                <div class=" donation-btn">
+                    <button class="donation1"> 100 Taka</button>
+                    <button class="donation2"> 200 Taka</button>
+                    <button class="donation3"> 300 Taka</button>
+                    <button class="donation4"> 500 Taka</button>
+                </div>
+                <!--  -->
+                <div>
+                    <input type="text" name="" id="input1" placeholder=" Other Amount (Taka)">
+
+                </div>
+                <div><button class="btn-primary">Donate Now</button></div>
+            </div>
+            <!-- news letter -->
+            <div class="letter-container" id="letter-container">
+                <div class="letter-details">
+                    <h1>Subscribe Newsletter</h1>
+                    <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology,
+                        promoting inclusive growth.</p>
+                </div>
+                <div>
+                    <input type="text" name="" id="input2" placeholder="Enter Your Email">
+                    <button class="subscribe1" id="subscribe">Subscribe</button>
+                </div>
+                <br>
+                <p class="gray-make">We Promise not to spam with you!</p>
+            </div>
         </section>
 
 
     </main>
-    <footer>
 
+    <footer>
+        <div class="final">
+            <h2>Bangladesh 2.0</h2>
+        </div>
+        <hr>
+        <div class="final final2">
+            <img src="images/facebook.png" alt="">
+            <img src="images/instagram.png" alt="">
+            <img src="images/x.png" alt="">
+
+        </div>
     </footer>
 
 </body>
